fixed overflow on six photo section, added redirect for signup

--- a/app/assets/stylesheets/entries.scss
+++ b/app/assets/stylesheets/entries.scss
@@ -154,3 +154,7 @@ $secondary4: #e5e3e3;
   margin-left: 2% !important;
   font-family: $font-regular;
 }
+
+.action-left {
+  text-align: left !important;
+}
